@@ -7,6 +7,7 @@ smoof 1.6.0.3
 * Added parameter size to addLoggingWrapper for improved performance
 * getLoggedValues now correctly names function parameters.
 * BBOB test function now return an ID.
+* Changed: moved from rPython and RJSONIO to reticulate.
 
 smoof 1.6.0
 ===========
